// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuList component should match the MenuList 1`] = `
<React.Fragment>
  <div
    className="menu-table-col debate-class"
  >
    <div
      className="menu-table"
    >
      <div>
        <Connect(DumbMenuItem)
          hasSubItems={false}
          identifier="survey"
          item={
            Object {
              "id": "foo",
              "parentId": "root",
            }
          }
          phaseId="phaseFoo"
          preSelect={false}
          selected={false}
          toggleMenu={[Function]}
        />
      </div>
      <div>
        <Connect(DumbMenuItem)
          hasSubItems={false}
          identifier="survey"
          item={
            Object {
              "id": "bar",
              "parentId": "root",
            }
          }
          phaseId="phaseFoo"
          preSelect={false}
          selected={false}
          toggleMenu={[Function]}
        />
      </div>
    </div>
  </div>
</React.Fragment>
`;

exports[`MenuList component should match the sub-MenuList 1`] = `
<React.Fragment>
  <div
    className="sub-menu-separator"
  />
  <div
    className="menu-table-col debate-class sub-menu"
  >
    <div
      className="menu-table"
    >
      <div>
        <Connect(DumbMenuItem)
          hasSubItems={false}
          identifier="survey"
          item={
            Object {
              "id": "foo",
              "parentId": "root",
            }
          }
          phaseId="phaseFoo"
          preSelect={false}
          selected={false}
          toggleMenu={[Function]}
        />
      </div>
      <div>
        <Connect(DumbMenuItem)
          hasSubItems={false}
          identifier="survey"
          item={
            Object {
              "id": "bar",
              "parentId": "root",
            }
          }
          phaseId="phaseFoo"
          preSelect={false}
          selected={false}
          toggleMenu={[Function]}
        />
      </div>
    </div>
  </div>
</React.Fragment>
`;
